  27 Sep 2021;  <chymera@gentoo.org> dandischema-0.3.4.ebuild:
  dev-python/dandischema: removed unused git variable

*dandischema-0.3.4 (27 Sep 2021)

  27 Sep 2021;  <chymera@gentoo.org> +dandischema-0.3.4.ebuild,
  +files/dandischema-0.3.4-coverage.patch,
  +files/dandischema-0.3.4-versioningit.patch, +metadata.xml:
  dev-python/dandischema: new package (DANDI stack)