@@ -1,1 +1,2 @@
 DIST dandischema-0.3.4.tar.gz 47642 SHA256 f154b8c9f4e06cbf770241a1cfd75fabaa9e6f1dd4cac1554627e85ac4e93681 SHA512 764db251e47147b16d6beaecabf7b4610caf60f8bdaf6a4b05c084a6274d249aa340cb503912895812fcfad7a0c305cae5b2db3d590aeb69a8afd4e7068edf82 WHIRLPOOL bfe8edb5da25b5d45a8fb7df9acdb4797478e2329bde0738cf4af3c318bb7d73942de79a4b70f78e2ac90d67bf74d11f1c733db111d1d676537dddc5d1be882c
+DIST dandischema-0.4.1.tar.gz 50515 SHA256 cb4a53d3107e0f0d731619cfd3d205aebe61fdf8ff4b05fed4a99f78bd5031ae SHA512 136dd3f02ee9f0c69c11103605cdf2a334cb93df22bc54a78259bb389ed2971590e12b5c112c25a2c6ec7fad821da55797cc318801cf5c3884d3bb8e2900e905 WHIRLPOOL c27bd646e6f9598df05af0b18398bfccc86c7dea681fb80326fec4d33644818279d51fd46c6d5d9a49cac9356d3a74062083dff7a455cc7060c2ca4c845592be
