@@ -1,3 +1,8 @@
+*dandischema-0.4.1 (28 Sep 2021)
+
+  28 Sep 2021;  <chymera@gentoo.org> +dandischema-0.4.1.ebuild:
+  dev-python/dandischema: version bump
+
   27 Sep 2021;  <chymera@gentoo.org> dandischema-0.3.4.ebuild:
   dev-python/dandischema: removed unused git variable
 
